[Fix] Pre overflow

--- a/web-app/src/pages/Entry.css
+++ b/web-app/src/pages/Entry.css
@@ -9,3 +9,7 @@
 .entry-content blockquote {
   font-style: italic;
 }
+
+.entry-content pre {
+  overflow-x: scroll;
+}
